--- a/index.html
+++ b/index.html
@@ -82,31 +82,123 @@
     <meta name="msapplication-navbutton-color" content="#0284c7">
     <meta name="apple-mobile-web-app-status-bar-style" content="#0284c7">
 
-    <!-- Structured Data / Schema.org -->
+    <!-- Structured Data / Schema.org - Store -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Store",
+        "@id": "https://solbin-x.com/#store",
         "name": "Solbin-X",
         "description": "Tienda de equipos tecnológicos en Perú. Laptops, componentes gaming, accesorios y más.",
         "url": "https://solbin-x.com",
-        "logo": "https://solbin-x.com/Imagenes/Version_Web.png",
-        "image": "https://solbin-x.com/Imagenes/Carrusel.png",
+        "logo": {
+            "@type": "ImageObject",
+            "url": "https://solbin-x.com/Imagenes/Version_Web.png",
+            "width": 600,
+            "height": 60
+        },
+        "image": [
+            {
+                "@type": "ImageObject",
+                "url": "https://solbin-x.com/Imagenes/Carrusel.png",
+                "width": 1200,
+                "height": 370
+            }
+        ],
         "telephone": "+51945297289",
         "email": "ventas@solbin-x.com",
         "address": {
             "@type": "PostalAddress",
             "addressCountry": "PE",
-            "addressRegion": "Lima"
+            "addressRegion": "Lima",
+            "addressLocality": "Lima"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": -12.0464,
+            "longitude": -77.0428
         },
         "priceRange": "S/. 100 - S/. 10000",
-        "openingHours": "Mo-Sa 09:00-18:00",
-        "paymentAccepted": "Efectivo, Transferencia, Yape, Plin",
+        "openingHours": ["Mo-Sa 09:00-18:00"],
+        "paymentAccepted": ["Efectivo", "Transferencia", "Yape", "Plin"],
         "currenciesAccepted": "PEN",
         "sameAs": [
             "https://facebook.com/solbinx",
             "https://instagram.com/solbinx"
-        ]
+        ],
+        "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Productos Tecnológicos",
+            "itemListElement": [
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Product",
+                        "name": "Laptops"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Product",
+                        "name": "Componentes Gaming"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Product",
+                        "name": "Accesorios Tecnológicos"
+                    }
+                }
+            ]
+        }
+    }
+    </script>
+
+    <!-- Structured Data / Schema.org - Website -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "@id": "https://solbin-x.com/#website",
+        "url": "https://solbin-x.com",
+        "name": "Solbin-X",
+        "description": "Venta de Laptops, Componentes y Accesorios Tecnológicos en Perú",
+        "publisher": {
+            "@id": "https://solbin-x.com/#store"
+        },
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": {
+                "@type": "EntryPoint",
+                "urlTemplate": "https://solbin-x.com/?search={search_term_string}"
+            },
+            "query-input": "required name=search_term_string"
+        }
+    }
+    </script>
+
+    <!-- Structured Data / Schema.org - Organization -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "@id": "https://solbin-x.com/#organization",
+        "name": "Solbin-X",
+        "url": "https://solbin-x.com",
+        "logo": "https://solbin-x.com/Imagenes/Version_Web.png",
+        "sameAs": [
+            "https://facebook.com/solbinx",
+            "https://instagram.com/solbinx"
+        ],
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+51945297289",
+            "contactType": "Ventas",
+            "availableLanguage": ["Spanish"],
+            "areaServed": "PE"
+        }
     }
     </script>
 
@@ -797,9 +889,14 @@
             <div class="flex justify-between items-center h-20">
                 <!-- Logo más compacto -->
                 <div class="flex items-center flex-shrink-0">
-                    <a href="#inicio" class="flex items-center">
-                        <img src="Imagenes/Version_Web.svg" alt="Solbin-X"
-                            class="h-[90px] w-auto dark:brightness-0 dark:invert transition-all duration-300 hover:scale-105">
+                    <a href="#inicio" class="flex items-center" aria-label="Solbin-X - Inicio">
+                        <img src="Imagenes/Version_Web.svg" 
+                             alt="Solbin-X Logo - Tienda de Tecnología en Perú"
+                             width="300" 
+                             height="90"
+                             loading="eager"
+                             fetchpriority="high"
+                             class="h-[90px] w-auto dark:brightness-0 dark:invert transition-all duration-300 hover:scale-105">
                     </a>
                 </div>
 
@@ -983,21 +1080,47 @@
         </div>
     </nav>
 
-    <!-- Breadcrumbs de navegación -->
+    <!-- Breadcrumbs de navegación con datos estructurados -->
     <nav id="breadcrumbs" aria-label="Breadcrumb"
         class="py-3 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 border-b dark:border-gray-700">
-        <ol class="flex items-center space-x-2 text-sm">
-            <li>
-                <a href="index.html"
+        <ol class="flex items-center space-x-2 text-sm" itemscope itemtype="https://schema.org/BreadcrumbList">
+            <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+                <a href="index.html" itemprop="item"
                     class="text-gray-500 hover:text-[#0D9488] transition-colors flex items-center gap-1">
                     <i class="fas fa-home text-xs"></i>
-                    Inicio
+                    <span itemprop="name">Inicio</span>
                 </a>
+                <meta itemprop="position" content="1">
             </li>
             <li class="text-gray-400"><i class="fas fa-chevron-right text-xs"></i></li>
-            <li class="text-gray-800 dark:text-gray-200 font-medium" aria-current="page">Catálogo</li>
+            <li class="text-gray-800 dark:text-gray-200 font-medium" aria-current="page" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+                <span itemprop="name">Catálogo</span>
+                <meta itemprop="position" content="2">
+            </li>
         </ol>
     </nav>
+    
+    <!-- Breadcrumb Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Inicio",
+                "item": "https://solbin-x.com/index.html"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Catálogo",
+                "item": "https://solbin-x.com/#catalogo"
+            }
+        ]
+    }
+    </script>
 
     <!-- Main Content -->
     <main id="main-content">
